--- a/index1.html
+++ b/index1.html
@@ -158,6 +158,8 @@
         squareVertexPositionBuffer = gl.createBuffer()
         gl.bindBuffer(gl.ARRAY_BUFFER, squareVertexPositionBuffer)
         vertices = [
+            // 1
+
           -1.0, 1.0, 0.0,
             1.0, 1.0, 0.0,
             -1.0, 0.65, 0.0,
@@ -165,16 +167,94 @@
 
             1.0, 0.65, 0.0,
             0.4, 0.65, 0.0,
-            -1.0, -0.65, 0.0,
-            -0.4, -0.65, 0.0,
-            1.0, 0.65, 0.0,
             -0.4, -0.65, 0.0,
             -1.0, -0.65, 0.0,
+
+            // 2
 
             -1.0, -0.65, 0.0,
             1.0, -0.65, 0.0,
             -1.0, -1.0, 0.0,
             1.0, -1.0, 0.0,
+
+            1.0, -1.0, 0.0,
+            1.0, -1.0, -0.5,
+            -1.0, -1.0, -0.5,
+            1.0, -1.0, 0.0,
+            -1.0, -1.0, 0.0,
+
+            // 3
+
+            -1.0, -1.0, 0.0,
+            -1.0, -0.65, 0.0,
+            -1.0, -1.0, -0.5,
+            -1.0, -0.65, -0.5,
+
+            -1.0, -0.65, -0.5,
+            1.0, -0.65, -0.5,
+            -1.0, -1.0, -0.5,
+            1.0, -1.0, -0.5,
+
+            // 4
+
+            1.0, -1.0, -0.5,
+            1.0, -0.65, -0.5,
+            1.0, -1.0, 0.0,
+            1.0, -0.65, 0.0,
+
+            1.0, -0.65, 0.0,
+            -0.4, -0.65, 0.0,
+            1.0, -0.65, -0.5,
+            -0.4, -0.65, -0.5,
+
+            // 5
+
+            -0.4, -0.65, -0.5,
+            -0.4, -0.65, 0.0,
+            1.0, 0.65, -0.5,
+            1.0, 0.65, 0.0,
+
+            1.0, 0.65, 0.0,
+            1.0, 0.65, -0.5,
+            1.0, 1.0, 0.0,
+            1.0, 1.0, -0.5,
+
+            // 6
+
+            1.0, 1.0, -0.5,
+            1.0, 1.0, 0.0,
+            -1.0, 1.0, -0.5,
+            -1.0, 1.0, 0.0,
+
+            -1.0, 1.0, 0.0,
+            -1.0, 1.0, -0.5,
+            -1.0, 0.65, 0.0,
+            -1.0, 0.65, -0.5,
+
+            // 7
+
+            -1.0, 0.65, -0.5,
+            -1.0, 0.65, 0.0,
+            0.4, 0.65, -0.5,
+            0.4, 0.65, 0.0,
+
+            0.4, 0.65, 0.0,
+            0.4, 0.65, -0.5,
+            -1.0, -0.65, 0.0,
+            -1.0, -0.65, -0.5,
+
+            // 8
+
+            -1.0, -0.65, -0.5,
+            -0.4, -0.65, -0.5,
+            0.4, 0.65, -0.5,
+            1.0, 0.65, -0.5,
+
+            1.0, 0.65, -0.5,
+            -1.0, 0.65, -0.5,
+            1.0, 1.0, -0.5,
+            -1.0, 1.0, -0.5,
+
         ]
         gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(vertices), gl.STATIC_DRAW)
         squareVertexPositionBuffer.itemSize = 3
@@ -182,10 +262,104 @@
         // Square Color
         squareVertexColorBuffer = gl.createBuffer();
         gl.bindBuffer(gl.ARRAY_BUFFER, squareVertexColorBuffer);
-        colors = [];
-        for (var i=0; i < vertices.length / 3; i++) {
-            colors = colors.concat([0.5, 0.5, 1.0, 1.0]);
-        }
+        colors = [
+          // 1
+
+          0.93, 0.41, 0.53, 1.0,
+          0.93, 0.41, 0.53, 1.0,
+          0.93, 0.41, 0.53, 1.0,
+          0.93, 0.41, 0.53, 1.0,
+
+          0.5, 0.5, 1.0, 1.0,
+          0.5, 0.5, 1.0, 1.0,
+          0.5, 0.5, 1.0, 1.0,
+          0.5, 0.5, 1.0, 1.0,
+
+          // 2
+
+          0.93, 0.41, 0.53, 1.0,
+          0.93, 0.41, 0.53, 1.0,
+          0.93, 0.41, 0.53, 1.0,
+          0.93, 0.41, 0.53, 1.0,
+
+          0.5, 0.5, 1.0, 1.0,
+          0.5, 0.5, 1.0, 1.0,
+          0.5, 0.5, 1.0, 1.0,
+          0.5, 0.5, 1.0, 1.0,
+          0.5, 0.5, 1.0, 1.0,
+
+          // 3
+
+          0.93, 0.41, 0.53, 1.0,
+          0.93, 0.41, 0.53, 1.0,
+          0.93, 0.41, 0.53, 1.0,
+          0.93, 0.41, 0.53, 1.0,
+
+          0.5, 0.5, 1.0, 1.0,
+          0.5, 0.5, 1.0, 1.0,
+          0.5, 0.5, 1.0, 1.0,
+          0.5, 0.5, 1.0, 1.0,
+
+          // 4
+
+          0.93, 0.41, 0.53, 1.0,
+          0.93, 0.41, 0.53, 1.0,
+          0.93, 0.41, 0.53, 1.0,
+          0.93, 0.41, 0.53, 1.0,
+
+          0.5, 0.5, 1.0, 1.0,
+          0.5, 0.5, 1.0, 1.0,
+          0.5, 0.5, 1.0, 1.0,
+          0.5, 0.5, 1.0, 1.0,
+
+          // 5
+
+          0.93, 0.41, 0.53, 1.0,
+          0.93, 0.41, 0.53, 1.0,
+          0.93, 0.41, 0.53, 1.0,
+          0.93, 0.41, 0.53, 1.0,
+
+          0.5, 0.5, 1.0, 1.0,
+          0.5, 0.5, 1.0, 1.0,
+          0.5, 0.5, 1.0, 1.0,
+          0.5, 0.5, 1.0, 1.0,
+
+          // 6
+
+          0.93, 0.41, 0.53, 1.0,
+          0.93, 0.41, 0.53, 1.0,
+          0.93, 0.41, 0.53, 1.0,
+          0.93, 0.41, 0.53, 1.0,
+
+          0.5, 0.5, 1.0, 1.0,
+          0.5, 0.5, 1.0, 1.0,
+          0.5, 0.5, 1.0, 1.0,
+          0.5, 0.5, 1.0, 1.0,
+
+          // 7
+
+          0.93, 0.41, 0.53, 1.0,
+          0.93, 0.41, 0.53, 1.0,
+          0.93, 0.41, 0.53, 1.0,
+          0.93, 0.41, 0.53, 1.0,
+
+          0.5, 0.5, 1.0, 1.0,
+          0.5, 0.5, 1.0, 1.0,
+          0.5, 0.5, 1.0, 1.0,
+          0.5, 0.5, 1.0, 1.0,
+
+          // 8
+
+          0.93, 0.41, 0.53, 1.0,
+          0.93, 0.41, 0.53, 1.0,
+          0.93, 0.41, 0.53, 1.0,
+          0.93, 0.41, 0.53, 1.0,
+
+          0.5, 0.5, 1.0, 1.0,
+          0.5, 0.5, 1.0, 1.0,
+          0.5, 0.5, 1.0, 1.0,
+          0.5, 0.5, 1.0, 1.0,          
+        ]
         gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(colors), gl.STATIC_DRAW);
         squareVertexColorBuffer.itemSize = 4;
         squareVertexColorBuffer.numItems = 4;
