--- a/index1.html
+++ b/index1.html
@@ -409,60 +409,67 @@
         colors = [
           // 1
 
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
+          1.0, 0.87, 0.86, 1.0,
+          1.0, 0.87, 0.86, 1.0,
+          1.0, 0.87, 0.86, 1.0,
+          1.0, 0.87, 0.86, 1.0,
 
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
+          1.0, 0.87, 0.86, 1.0,
+          1.0, 0.87, 0.86, 1.0,
+          1.0, 0.87, 0.86, 1.0,
+          1.0, 0.87, 0.86, 1.0,
 
           // 2
 
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
+          1.0, 0.87, 0.86, 1.0,
+          1.0, 0.87, 0.86, 1.0,
+          1.0, 0.87, 0.86, 1.0,
+          1.0, 0.87, 0.86, 1.0,
 
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
+          // bawah
+          1.0, 0.51, 0.46, 1.0,
+          1.0, 0.51, 0.46, 1.0,
+          1.0, 0.51, 0.46, 1.0,
+          1.0, 0.51, 0.46, 1.0,
+          1.0, 0.51, 0.46, 1.0,
 
           // 3
 
+          // kiri bawah
           0.93, 0.41, 0.53, 1.0,
           0.93, 0.41, 0.53, 1.0,
           0.93, 0.41, 0.53, 1.0,
           0.93, 0.41, 0.53, 1.0,
 
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-
+          // belakang bawah
+          1.0, 0.87, 0.86, 1.0,
+          1.0, 0.87, 0.86, 1.0,
+          1.0, 0.87, 0.86, 1.0,
+          1.0, 0.87, 0.86, 1.0,
+          
           // 4
 
+          // kanan bawah
           0.93, 0.41, 0.53, 1.0,
           0.93, 0.41, 0.53, 1.0,
           0.93, 0.41, 0.53, 1.0,
           0.93, 0.41, 0.53, 1.0,
 
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
+          // another alas, kek bawah
+          1.0, 0.51, 0.46, 1.0,
+          1.0, 0.51, 0.46, 1.0,
+          1.0, 0.51, 0.46, 1.0,
+          1.0, 0.51, 0.46, 1.0,
 
           // 5
 
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
+          // miring 1
+          1.0, 0.51, 0.46, 1.0,
+          1.0, 0.51, 0.46, 1.0,
+          1.0, 0.51, 0.46, 1.0,
+          1.0, 0.51, 0.46, 1.0,
 
+          // kanan atas
           0.93, 0.41, 0.53, 1.0,
           0.93, 0.41, 0.53, 1.0,
           0.93, 0.41, 0.53, 1.0,
@@ -470,11 +477,13 @@
 
           // 6
 
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
+          // atas
+          1.0, 0.51, 0.46, 1.0,
+          1.0, 0.51, 0.46, 1.0,
+          1.0, 0.51, 0.46, 1.0,
+          1.0, 0.51, 0.46, 1.0,
 
+          // kiri atas
           0.93, 0.41, 0.53, 1.0,
           0.93, 0.41, 0.53, 1.0,
           0.93, 0.41, 0.53, 1.0,
@@ -482,27 +491,29 @@
 
           // 7
 
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
+          // another kek bawah
+          1.0, 0.51, 0.46, 1.0,
+          1.0, 0.51, 0.46, 1.0,
+          1.0, 0.51, 0.46, 1.0,
+          1.0, 0.51, 0.46, 1.0,
 
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
+          // miring 2
+          1.0, 0.51, 0.46, 1.0,
+          1.0, 0.51, 0.46, 1.0,
+          1.0, 0.51, 0.46, 1.0,
+          1.0, 0.51, 0.46, 1.0,
 
           // 8
 
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
+          1.0, 0.87, 0.86, 1.0,
+          1.0, 0.87, 0.86, 1.0,
+          1.0, 0.87, 0.86, 1.0,
+          1.0, 0.87, 0.86, 1.0,
 
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,          
+          1.0, 0.87, 0.86, 1.0,
+          1.0, 0.87, 0.86, 1.0,
+          1.0, 0.87, 0.86, 1.0,
+          1.0, 0.87, 0.86, 1.0,       
         ]
         gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(colors), gl.STATIC_DRAW);
         squareVertexColorBuffer.itemSize = 4;
