--- a/index1.html
+++ b/index1.html
@@ -207,93 +207,100 @@
         triangleVertexColorBuffer = gl.createBuffer()
         gl.bindBuffer(gl.ARRAY_BUFFER, triangleVertexColorBuffer)
         var colors = [
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
+          // depan
+          0.93, 0.31, 0.58, 1.0,
+          0.93, 0.31, 0.58, 1.0,
+          0.93, 0.31, 0.58, 1.0,
+          0.93, 0.31, 0.58, 1.0,
+
+          0.93, 0.31, 0.58, 1.0,
+          0.93, 0.31, 0.58, 1.0,
+          0.93, 0.31, 0.58, 1.0,
+          0.93, 0.31, 0.58, 1.0,
+
+          0.93, 0.31, 0.58, 1.0,
+          0.93, 0.31, 0.58, 1.0,
+          0.93, 0.31, 0.58, 1.0,
+          0.93, 0.31, 0.58, 1.0,
+          0.93, 0.31, 0.58, 1.0,
+          0.93, 0.31, 0.58, 1.0,
+
+          // dalem tengah
+          0.76, 0.08, 0.38, 1.0,
+          0.76, 0.08, 0.38, 1.0,
+          0.76, 0.08, 0.38, 1.0,
+          0.76, 0.08, 0.38, 1.0,
+
+          0.76, 0.08, 0.38, 1.0,
+          0.76, 0.08, 0.38, 1.0,
+          0.76, 0.08, 0.38, 1.0,
+          0.76, 0.08, 0.38, 1.0,
+
+          0.76, 0.08, 0.38, 1.0,
+          0.76, 0.08, 0.38, 1.0,
+          0.76, 0.08, 0.38, 1.0,
+          0.76, 0.08, 0.38, 1.0,
+
+          // belakang kiri
+          0.93, 0.31, 0.58, 1.0,
+          0.93, 0.31, 0.58, 1.0,
+          0.93, 0.31, 0.58, 1.0,
+          0.93, 0.31, 0.58, 1.0,
+          0.93, 0.31, 0.58, 1.0,
+          0.93, 0.31, 0.58, 1.0,
 
           0.93, 0.41, 0.53, 1.0,
           0.93, 0.41, 0.53, 1.0,
           0.93, 0.41, 0.53, 1.0,
           0.93, 0.41, 0.53, 1.0,
 
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
+          // dalem kiri bawah
+          0.76, 0.08, 0.38, 1.0,
+          0.76, 0.08, 0.38, 1.0,
+          0.76, 0.08, 0.38, 1.0,
+          0.76, 0.08, 0.38, 1.0,
 
           0.93, 0.41, 0.53, 1.0,
           0.93, 0.41, 0.53, 1.0,
           0.93, 0.41, 0.53, 1.0,
           0.93, 0.41, 0.53, 1.0,
 
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
+          // dalem kanan bawah
+          0.76, 0.08, 0.38, 1.0,
+          0.76, 0.08, 0.38, 1.0,
+          0.76, 0.08, 0.38, 1.0,
+          0.76, 0.08, 0.38, 1.0,
 
           0.93, 0.41, 0.53, 1.0,
           0.93, 0.41, 0.53, 1.0,
           0.93, 0.41, 0.53, 1.0,
           0.93, 0.41, 0.53, 1.0,
 
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
+          // kanan luar
+          0.76, 0.08, 0.38, 1.0,
+          0.76, 0.08, 0.38, 1.0,
+          0.76, 0.08, 0.38, 1.0,
+          0.76, 0.08, 0.38, 1.0,
 
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
+          // kiri luar
+          0.76, 0.08, 0.38, 1.0,
+          0.76, 0.08, 0.38, 1.0,
+          0.76, 0.08, 0.38, 1.0,
+          0.76, 0.08, 0.38, 1.0,
 
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
+          0.93, 0.31, 0.58, 1.0,
+          0.93, 0.31, 0.58, 1.0,
+          0.93, 0.31, 0.58, 1.0,
+          0.93, 0.31, 0.58, 1.0,
+          0.93, 0.31, 0.58, 1.0,
+          0.93, 0.31, 0.58, 1.0,
 
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
-          0.93, 0.41, 0.53, 1.0,
+          0.93, 0.31, 0.58, 1.0,
+          0.93, 0.31, 0.58, 1.0,
+          0.93, 0.31, 0.58, 1.0,
+          0.93, 0.31, 0.58, 1.0,
+          0.93, 0.31, 0.58, 1.0,
+          0.93, 0.31, 0.58, 1.0,
         ]
         gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(colors), gl.STATIC_DRAW)
         triangleVertexColorBuffer.itemSize = 4
@@ -446,7 +453,7 @@
           1.0, 0.87, 0.86, 1.0,
           1.0, 0.87, 0.86, 1.0,
           1.0, 0.87, 0.86, 1.0,
-          
+
           // 4
 
           // kanan bawah
